[Teki] Fixed Fat JAR